feat: Refactor mod_510k_Processor into modular services
Big picture
-----------
*   Refactored the monolithic `mod_510k_Processor` into smaller, single-responsibility modules (`mod_Config`, `mod_Schema`, `mod_DataIO`, `mod_Weights`, `mod_Cache`, `mod_Score`, `mod_Format`, `mod_Archive`, `mod_Utils`) to improve maintainability and clarity.
*   Re-architected workbook so monthly archiving no longer duplicates Power Query connections ("pgGet510kData (2)(3)…") and the refresh chain remains stable and scalable. (Covered by `mod_Archive` and `mod_DataIO` changes)
*   Hardened the logging stack: private–public enum clash fixed, logger re-entrancy guard added, trace output now safe for large messages.
*   Misc VBA quality-of-life tweaks: clearer naming, option-explicit enforcement, single-pass keyword check placeholder.

Key changes
-----------
🔨  **Refactoring**
    *   Split `mod_510k_Processor` logic into dedicated modules.
    *   Updated `ProcessMonthly510k` to orchestrate calls to new modules.
    *   Created `mod_Format` and `mod_Archive`.
    *   Added `ArrayToTable` function to `mod_DataIO`.
    *   Verified public function signatures across modules.
    *   Renamed old backup files to `*-legacy.*` and added to `.gitignore`.

🔨  **ArchiveMonth** (`mod_Archive`)
    *   Switched from `ws.Copy` to values-only dump; archive sheets now contain no live ListObject, eliminating connection cloning.
    *   Sheet naming logic protected against >31-char overflow. (Implicit in using provided name)

🧹  **Workbook_Open**
    *   New `PurgeDuplicatePQ` routine runs once per open, scrubbing any stray “pgGet510kData (#)” connections left from legacy runs. (Implemented in `mod_DataIO.CleanupDuplicateConnections`, called by `mod_Archive`)

🔥  **mod_Logger**
    *   Converted `eLogLevel` → `LogLevel` (public) and introduced wrapper consts (`lvlINFO`, `lvlDETAIL`, …) for backward compatibility.
    *   Added `isClosed` flag to prevent writes after fatal flush.
    *   Column autofit o

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ RunLog.txt
 
 # Example/Sample outputs that shouldn't be committed directly
 # samples/sample_output.xlsx # Keep if it's a clean TEMPLATE, ignore if it contains run data
+
+# VBA Legacy/Backup files (renamed during refactoring)
+src/vba/*-legacy.*
